<resources>
    <string name="terms"><p>By creating a RentalGeek account, you agree to our <u>Terms &amp; Conditions</u></p></string>
    <string name="app_name">RentalGeek</string>
    <string name="fb_app_id">1630631863882274</string>
    <string name="hello_world">Hello world!</string>
    <string name="or">_________ or _________</string>
    <string name="pay_get_geek">Pay and get your Geek Score&#8482;</string>
    <string name="not_member">Not a Member?\n<u>Create an Account</u></string>
    <string name="tuto_one">Fill out our form once and apply to as many properties as you want</string>
    <string name="armed"><p>Armed with your GeekScore&#8482;, apply to any property with a single click and your completed app is instantly sent for speedy approval. Simply "Click-to-Rent" and you are done.</p></string>
    <string name="freshest">Check out the freshest digs, available now, right from your phone using our patent pending augmented reality technology.</string>
    <string name="tuto_two">Just update it every time you rent, and never touch paper tenant forms again</string>
    <string name="fourthirty">For a single one-time payment of $25, apply to as many rentals as you want so you never miss out on your second choice rental while waiting to hear back from your first.</string>
    <string name="username">Email Address</string>
    <string name="apply_dialouge">Your personal information is always sent over a secure connection and encrypted on our server. It is never stored in your device.</string>
    <string name="password">Password</string>
    <string name="personal_info_txt">This process is quick and secure. Your personal information is required in order for us to retrieve your credit report and verify your identity.</string>
    <string name="terms_one">The Fair Credit Reporting Act allows me to obtain a disclosure from every credit reporting agency of the nature and substance of all information in my ﬁle at the time of the request. Full disclosure of information in your ﬁle can be obtained at RentalGeek.com in your user proﬁle. The credit report you are requesting from RentalGeek is not intended to consititute the disclosure of RentalGeek information required by the Fair Credit Reporting Act or similar State Laws.\n \n
I am entitled to receive a disclosure directly from the consumer reporting agency free of charge under the following circumstances:\n\n
I have been denied credit, insurance or employment within the past sixty (60) days as a result of my credit report\n\n
I certify in writing that I am unemployed and intend to apply for employment in the 60-day period beginning on the date on which i made the certification\n\n
I am a recipient of public Welfare assistance</string>
    <string name="terms_two">You understand that by clicking on the I AGREE button immediately following this notice you are providing ‘written instructions’ to RentalGeek under the Fair Credit Reporting Act authorizing RentalGeek to obtain information from your personal credit profile or other information from a credit reporting agency. You authorize RentalGeek to obtain such information to verift your identity.\n\n

If you agree to share a Credit Report, we will also use this information to share accompanying criminal and eviction history.</string>
    <string name="verify_text">Enter your RentalGeek password to encrypt your information. If you don’t remember your password, you will have to recreate your GeekScore&#8482; Profile again.</string>
    <string name="pay_txt">You understand that by clicking on the \'Agree and Pay $25.00\' button immediately following this notice, you are providing \'written instruction\' to  RentalGeek under the Fair Credit Reporting Act to obtain information from your personal credit profile or other information from a credit reporting agency. You authorize RentalGeek to obtain information to create your GeekScore.&#8482;</string>
    <string name="click_rent">Search for RENTAL</string>
    <string name="last_msg_one">You have successfully completed the GeekScore&#8482; Application Process \n\n Take advantage of GeekVision&#8482; and choose from a wide selection of rental properties available only at RentalGeek. You can apply for the property of your choice from the property detail page.</string>
    <string name="bullet">&#8226;</string>
    <string name="dialog_msg_loading">Loading, Please wait\u2026</string>
    <string name="dialog_msg_loading_roommates">Loading Roommates, Please wait\u2026</string>
    <string name="dialog_msg_loading_roommate_leave_group">Leaving Group, Please wait\u2026</string>
    <string name="dialog_msg_loading_roommate_remove_invite">Removing Invite, Please wait\u2026</string>
    <string name="dialog_msg_loading_roommate_add_invite">Adding Invite, Please wait\u2026</string>
    <string name="signin">SignIn</string>
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>
    <string name="geek_score_tm">Geek Score™</string>
    <string name="my_lease">My Lease</string>
    <string name="favorites">Favorites</string>
    <string name="applications">Applications</string>
    <string name="roommates">Roommates</string>
    <string name="payment">Payment</string>
    <string name="cosigner">Cosigner</string>
    <string name="my_cosigner">My Cosigner</string>
    <string name="geek_vision_tm">Geek Vision™</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="lease">Lease</string>
    <string name="fragment_roommates_header_addroommate">Have roommates you need to apply with?\nInvite them here one at a time.</string>
    <string name="fragment_roommates_header_roommates">Your Roommates</string>
    <string name="fragment_roommates_field_firstlastname">First &amp; Last Name (Mandatory) </string>
    <string name="fragment_roommates_field_emailaddress">Email Address (Mandatory) </string>
    <string name="fragment_roommateinvite_message"><![CDATA[You have been invited by <b>%1s</b> to join a roommate group.]]></string>
    <string name="fragment_roommateinvite_noinvites">You have no pending invites.</string>
    <string name="fragment_roommateinvite_btn_accept">Accept</string>
    <string name="fragment_roommateinvite_btn_decline">Decline</string>
    <string name="fragment_payment_totaldue"><![CDATA[Your total amount due includes the <b>first months rent (&#36;%1$s) &amp; the security deposit (&#36;%2$s)</b> payed equally between all the members of your roommates group.]]></string>
    <string name="fragment_payment_nonedue">You have no pending payments at this time.</string>
    <string name="fragment_payment_yourtotal">Your total</string>
    <string name="fragment_payment_label_nameoncard">Name on Card</string>
    <string name="fragment_payment_label_cardnumber">Card Number</string>
    <string name="fragment_payment_btn_submit">Submit</string>
    <string name="geek_go">You must create your GeekScore&#8482; to apply for rentals</string>
    <string name="invite_cosign_text">%s has invited you to be a cosigner!</string>
    <string name="fill_invite_cosign_text">To continue please fill out\nour cosigner application</string>
    <string name="continue_text">CONTINUE</string>
    <string name="cosign_app_header_text">Verify Personal Information</string>
    <string name="payment_header_text">Pay &amp; Get Your GeekScore</string>
    <string name="cosign_app_sub_header_text">This process is quick and secure. Your personal information is required in order for us to retrieve your credit report and verify your identity.</string>
    <string name="cosign_firstname_form_label">First Name (Mandatory)</string>
    <string name="cosign_lastname_form_label">Last Name (Mandatory)</string>
    <string name="cosign_dob_form_label">Date of Birth (Mandatory)</string>
    <string name="ssn_form_label">SSN (Mandatory)</string>
    <string name="marital_status_form_label">Marital Status (Mandatory)</string>
    <string name="phone_number_form_label">Phone Number (Mandatory)</string>
    <string name="address_form_label">Address (Mandatory)</string>
    <string name="city_form_label">City (Mandatory)</string>
    <string name="state_form_label">State (Mandatory)</string>
    <string name="zip_form_label">Zip Code (Mandatory)</string>
    <string name="rent_or_own_form_label">Do You Currently Own or Rent (Mandatory)</string>
    <string name="monthly_payment_form_label">Monthly Rent or Mortgage Payment (Mandatory)</string>
    <string name="lost_court_form_label">Have You Ever Lost a Court Judgement?</string>
    <string name="lawsuit_filed_form_label">Have You Ever had a Lawsuit Filed?</string>
    <string name="foreclosed_form_label">Have you been Foreclosed Upon?</string>
    <string name="bankruptcy_form_label">Have you ever Declared Bankruptcy?</string>
    <string name="felon_form_label">Are you a Felon?</string>
    <string name="employer_form_label">Employer Name (Mandatory)</string>
    <string name="position_form_label">Employment Position (Mandatory)</string>
    <string name="income_form_label">Monthly Income (Mandatory)</string>
    <string name="cover_rent_form_label">Do you intend on paying the rent amount each month on behalf of the renter for the duration of the lease agreement? (Mandatory)</string>
    <string name="geek_title">Geek Score&#8482;</string>
    <string name="location_label">Location</string>
    <string name="monthly_rent_label">Monthly Rent</string>
    <string name="bedrooms_label">Bedrooms</string>
    <string name="bathroom_label">Bathrooms</string>
    <string name="management_company_label">Property Management Company</string>
    <string name="cosigner_invite_accept">ACCEPT</string>
    <string name="cosigner_invite_decline">DECLINE</string>
    <string name="search_title">Search</string>
    <string name="search_none">No rentals found.</string>
    <string name="fav_title">Favorites</string>
    <string name="fav_none">No favorite rentals found.</string>
    <string name="login_title">Login</string>
    <string name="invalid_login">Invalid username and/or password</string>
    <string name="apply_text">APPLY</string>
    <string name="applied_text">APPLIED &#x2713;</string>
    <string name="approved_text">APPROVED &#x2713;</string>
    <string name="search_rental">Searching for Rentals</string>
    <string name="loading_rentals">Loading Rentals, Please wait\u2026</string>
    <string name="next_text">NEXT</string>
    <string name="geek_score_wait_msg">Your Geek Score&#8482;\nis being calculated\nand will be available shortly!</string>
    <string name="geek_score_wait_thanks">Thank you for your patience</string>
    <string name="your_geek_score">Your Geek Score&#8482;</string>
    <string name="oops">Oops, something went wrong</string>
    <string name="linkedin_auth_error">Something went wrong authenticating LinkedIn</string>
    <string name="email_required">Email required</string>
    <string name="email_format">Must be in email format</string>
    <string name="password_required">Password required</string>
    <string name="password_min_length">Password must be 8 characters</string>
    <string name="manhattan_kansas_latitude">39.1865688</string>
    <string name="manhattan_kansas_longitude">-96.594844</string>
    <string name="manhattan_kansas_radius">5</string>
    <string-array name="months_array">
        <item> </item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>