<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/cosign_app_header_text"
        android:textSize="18sp"
        android:textColor="@color/light_black"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:gravity="center"
        android:text="@string/cosign_app_sub_header_text"
        android:textSize="14sp"
        android:textColor="@color/light_black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:paddingLeft="10dp"
        android:text="@string/cosign_firstname_form_label"
        android:textSize="14sp"
        android:textColor="@color/blue"/>
    <EditText
        android:id="@+id/first_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingLeft="10dp"
        android:text="@string/cosign_lastname_form_label"
        android:textSize="14sp"
        android:textColor="@color/blue"/>
    <EditText
        android:id="@+id/last_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingLeft="10dp"
        android:text="@string/cosign_dob_form_label"
        android:textSize="14sp"
        android:textColor="@color/blue"/>
</LinearLayout>
