<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_creme"
            android:paddingTop="28dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cosign_app_header_text"
                android:textColor="@color/light_black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cosign_app_sub_header_text"
                android:textColor="@color/light_black"
                android:textSize="16sp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/profile_form_side_padding"
            android:paddingRight="@dimen/profile_form_side_padding"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cosign_firstname_form_label"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/firstname_edittext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="32dp"
                android:paddingLeft="5dp"
                android:background="@drawable/thin_border"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cosign_lastname_form_label"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/lastname_edittext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="32dp"
                android:paddingLeft="5dp"
                android:background="@drawable/thin_border"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cosign_dob_form_label"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">

                <Spinner
                    android:id="@+id/dob_month"
                    android:layout_width="75dp"
                    android:layout_height="50dp"
                    android:paddingLeft="2dp"
                    android:background="@drawable/thin_border"
                    android:spinnerMode="dialog"
                    android:entries="@array/months"
                    android:layout_marginRight="16dp" />

                <Spinner
                    android:id="@+id/dob_day"
                    android:layout_width="75dp"
                    android:layout_height="50dp"
                    android:paddingLeft="2dp"
                    android:background="@drawable/thin_border"
                    android:spinnerMode="dialog"
                    android:entries="@array/days"
                    android:layout_marginRight="16dp" />

                <Spinner
                    android:id="@+id/dob_year"
                    android:layout_width="75dp"
                    android:layout_height="50dp"
                    android:paddingLeft="2dp"
                    android:background="@drawable/thin_border"
                    android:spinnerMode="dialog"
                    android:entries="@array/years"/>
            </LinearLayout>

            <Button
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:text="@string/next_text"
                android:textColor="@color/white"
                android:layout_gravity="right"
                android:background="@drawable/continue_bg"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

