<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_form_label"
                android:textSize="14sp"
                android:textColor="@color/blue"/>

            <EditText
                android:id="@+id/address_edittext"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textCursorDrawable="@null"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/thin_border"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/city_form_label"
                android:textSize="14sp"
                android:textColor="@color/blue"/>

            <EditText
                android:id="@+id/city_edittext"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textCursorDrawable="@null"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/thin_border"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/state_form_label"
                android:textSize="14sp"
                android:textColor="@color/blue"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/thin_border" >

                <com.rentalgeek.android.ui.view.SimpleSpinner
                    android:id="@+id/state_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/zip_form_label"
                android:textSize="14sp"
                android:textColor="@color/blue"/>

            <EditText
                android:id="@+id/zip_edittext"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textCursorDrawable="@null"
                android:padding="10dp"
                android:inputType="number"
                android:maxLength="5"
                android:layout_marginTop="10dp"
                android:background="@drawable/thin_border"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/rent_or_own_form_label"
                android:textSize="14sp"
                android:textColor="@color/blue"/>

            <info.hoang8f.android.segmented.SegmentedGroup
                android:id="@+id/own_or_rent_segment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/owns_button"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Own"
                    style="@style/RadioButton"
                    />

                <RadioButton
                    android:id="@+id/rents_button"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Rent"
                    style="@style/RadioButton"
                    />

            </info.hoang8f.android.segmented.SegmentedGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/monthly_payment_form_label"
                android:textSize="14sp"
                android:textColor="@color/blue"/>

            <EditText
                android:id="@+id/monthly_payment_edittext"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textCursorDrawable="@null"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:background="@drawable/thin_border"/>

            <Button
                android:id="@+id/next_button"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="110dp"
                android:background="@drawable/continue_bg"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="NEXT"
                android:layout_gravity="right"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>